test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/5_limit/EXCEED_PARAM_LIMIT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="EXCEED_PARAM_LIMIT" } }
function f(a:uint32, a2:uint32, a3:uint32, a4:uint32, a5:uint32, a6:uint32, a7:uint32, a8:uint32, a9:uint32):void
{
}
